# timecard

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: rust.yml
src/: config.rs  lib.rs  main.rs  models.rs  options.rs
